--- a/hotels.html
+++ b/hotels.html
@@ -9,31 +9,22 @@
 
 <body>
     <header class='main-header'>
-        <a class="main-header-logo" href="index.html">
-            <img src="img/logo-sedona.svg" width='140' height="72" alt='Лого города Седона'>
-        </a>
         <nav class='main-navigation'>
+            <a class="main-header-logo" href="index.html">
+                <img src="img/logo.svg" width='200' height="100" alt='Седона — небольшой городок в Аризоне, заслуживающий большего!'>
+            </a>
             <ul class='main-navigation'>
-                <li>
-                    <a href='info.html'>Информация</a>
-                </li>
-                <li>
-                    <a href='media.html'>Фото и видео</a>
-                </li>
-                <li>
-                    <a href='map.html'>Карта штата</a>
-                </li>
-                <li class="current-page">
-                    <a href='hotels.html'>Гостиницы</a>
-                </li>
+                <li><a href='info.html'>Информация</a></li>
+                <li><a href='media.html'>Фото и видео</a></li>
+                <li><a href='map.html'>Карта штата</a></li>
+                <li class="current-page"><a href='hotels.html'>Гостиницы</a></li>
             </ul>
         </nav>
     </header>
     <main class="hotels-container">
         <h1 class="visually-hidden">Варианты отелей в Седоне</h1>
-        <section class="search-filters">
-            <h2 class="visually-hidden">Фильтры выбора отелей</h2>
-            <div class="hotels-pic">
+        <section class="search- filters">
+            <div class="filters-background">
                 <!--Здесь будет фон для фильтров-->
             </div>
             <!--Формы фильтров-->
@@ -42,26 +33,18 @@
             <h2 class="search-results-number">Найдено: 3</h2>
             <p>Сортировка:</p>
             <ul class="search-sorting">
-                <li>
-                    <a class="sorting-button price current" href="#">По цене</a>
-                </li>
-                <li>
-                    <a class="sorting-button type" href="#">По типу</a>
-                </li>
-                <li>
-                    <a class="sorting-button rating" href="#">По рейтингу </a>
-                </li>
-                <li>
-                    <a class="sorting-button stars right" href="#">
+                <li><a class="sorting-button price current" href="#">По цене</a></li>
+                <li><a class="sorting-button type" href="#">По типу</a></li>
+                <li><a class="sorting-button rating" href="#">По рейтингу </a></li>
+                <li><a class="sorting-button stars right" href="#">
                         <!--Изображение сортировочной кнопки-->
-                    </a>
-                </li>
+                    </a></li>
             </ul>
             <ul class="found-hotels-results">
                 <li class="found-hotel">
                     <p class="found-hotel-image">
                         <a href="found-hotel.html">
-                            <img src="img/hotels/hotel-1.png" width="135" height="90" alt="Фото отеля Amara Resort & Spa">
+                            <img src="img/hotel-1.jpg" width="220" height="165" alt="Amara Resort & Spa">
                         </a>
                     </p>
                     <div class="found-hotel-information">
@@ -73,14 +56,14 @@
                         <a class="button" href="#">Забронировать</a>
                     </div>
                     <div class="found-hotel-ratings">
-                        <img src="img/star.svg" width="18" height="17" alt="4 звезды">
+                        <img src="stars/hotel-1.jpg" width="10" height="10" alt="4 звезды">
                         <p>Рейтинг: 8,5</p>
                     </div>
                 </li>
                 <li class="found-hotel">
                     <p class="found-hotel-image">
                         <a href="found-hotel.html">
-                            <img src="img/hotels/hotel-2.png" width="135" height="90" alt="Фото отеля Desert Quail Inn">
+                            <img src="img/hotel-2.jpg" width="220" height="165" alt="Desert Quail Inn">
                         </a>
                     </p>
                     <div class="found-hotel-information">
@@ -92,14 +75,14 @@
                         <a class="button" href="#">Забронировать</a>
                     </div>
                     <div class="found-hotel-ratings">
-                        <img src="img/star.svg" width="18" height="17" alt="3 звезды">
+                        <img src="stars/hotel-2.jpg" width="10" height="10" alt="3 звезды">
                         <p>Рейтинг: 8,9</p>
                     </div>
                 </li>
                 <li class="found-hotel">
                     <p class="found-hotel-image">
                         <a href="found-hotel.html">
-                            <img src="img/hotels/hotel-3.png" width="135" height="90" alt="Фото отеля Villas at Poco Diablo">
+                            <img src="img/hotel-3.jpg" width="220" height="165" alt="Villas at Poco Diablo">
                         </a>
                     </p>
                     <div class="found-hotel-information">
@@ -111,7 +94,7 @@
                         <a class="button" href="#">Забронировать</a>
                     </div>
                     <div class="found-hotel-ratings">
-                        <img src="img/star.svg" width="18" height="17" alt="2 звезды">
+                        <img src="stars/hotel-3.jpg" width="10" height="10" alt="4 звезды">
                         <p>Рейтинг: 9,2</p>
                     </div>
                 </li>
@@ -121,19 +104,13 @@
     <footer class="main-footer">
         <a href="#" class="sedona-hashtag">#visitsedona</a>
         <ul>
-            <li>
-                <a class="social-button" href="#">Твиттер</a>
-            </li>
-            <li>
-                <a class="social-button" href="#">Фейсбук</a>
-            </li>
-            <li>
-                <a class="social-button" href="#">YouTube</a>
-            </li>
+            <li><a class="social-button" href="#">Твиттер</a></li>
+            <li><a class="social-button" href="#">Фейсбук</a></li>
+            <li><a class="social-button" href="#">YouTube</a></li>
         </ul>
         <p class="footer-copyright">
             <b>Website by</b>
-            <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
+            <a class="redirection-htmlacademy" href="https://htmlacademy.ru"><img src="img/logo-htmlacademy.svg" width='115' height="41" alt='Лого htmlacademy'></a>
         </p>
     </footer>
 </body>
