--- a/index.html
+++ b/index.html
@@ -76,9 +76,33 @@
 				<img src="img/ind/map.jpg" width="1200" alt="Город Седона на карте">
 				<b class="travel-effect">Заинтересовались?</b>
 				<p class="travel-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-				<h2 class="travel-search">Поиск гостиницы в Седоне</h2>
-				<!--Форма поиска гостиницы в Седоне-->
-				<a href="#" class='button'>Найти</a>
+				
+				<form class="search-form" action="https://echo.htmlacademy.ru" method="post">
+					<fieldset>
+						<legend class="travel-search">Поиск гостиницы в Седоне</legend>
+						<p class="search-parameter">
+							<label for="arrival-date-field">Дата заезда:</label>
+							<input id="arrival-date-field" type="text" name="arrival-date" value="" placeholder="24 апреля 2017" required>
+						</p>
+						<p class="search-parameter">
+								<label for="departure-date-field">Дата выезда:</label>
+								<input id="departure-date-field" type="text" name="departure-date" value="" placeholder="4 июля 2017" required>
+						</p>
+						<p class="search-parameter">
+								<label for="adults-quantity">Взрослые:</label>
+								<input id="adults-quantity" type="number" name="adults" value="2" min="1" max="10">
+								<input type="button" class="reduce-adult">Уменьшить</button>
+								<input type="button" class="add-adult">Увеличить</button>
+						</p>
+						<p class="search-parameter">
+								<label for="children-quantity">Дети:</label>
+								<input id="children-quantity" type="number" name="children" value="0" min="0" max="10">
+								<input type="button" class="reduce-child">Уменьшить</button>
+								<input type="button" class="add-child">Увеличить</button>
+						</p>
+						<button class="button" type="submit">Найти</button>
+					</fieldset>
+				</form>
 			</div>
 		</section>
 	</main>
