--- a/hotels.html
+++ b/hotels.html
@@ -47,18 +47,16 @@
                     <legend>Тип жилья:</legend>
                     <ul>
                         <li class="filter-parameter">
-                            <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="hotel" id="filter-hotel"
-                                checked>
+                            <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="hotel" id="filter-hotel" checked>
                             <label for="filter-hotel">Гостиница</label>
                         </li>
                         <li class="filter-parameter">
-                            <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="motel" id="filter-motel"
-                            checked>
+                            <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="motel" id="filter-motel" checked>
                             <label for="filter-motel">Мотель</label>
                         </li>
                         <li class="filter-parameter">
                             <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="apartments" id="filter-apartments"
-                            checked>
+                                checked>
                             <label for="filter-apartments">Апартаменты</label>
                         </li>
                     </ul>
