--- a/hotels.html
+++ b/hotels.html
@@ -77,16 +77,11 @@
                 <li><a class="sorting-parameter price current" href="#">По цене</a></li>
                 <li><a class="sorting-parameter type" href="#">По типу</a></li>
                 <li><a class="sorting-parameter rating" href="#">По рейтингу </a></li>
-                <form class="sorting-buttons" method="post" action="https://echo.htmlacademy.ru">
-                    <fieldset>
-                        <legend class="visually-hidden">Порядок сортировки</legend>
-                        <label class="visually-hidden" for="button-reduce-child">По убыванию</label>
-                        <input type="button" class="sorting-button" id="button-descending"></button>
-                        <label class="visually-hidden" for="button-ascending">По возрастанию</label>
-                        <input type="button" class="sorting-button" id="button-ascending"></button>
-                    </fieldset>
-                </form>
             </ul>
+            <ul class="sorting-order">
+                <li><a class="sorting-order-descending default" href="#">По убыванию</a></li>
+                <li><a class="sorting-order-ascending" href="#">По возрастанию</a></li>
+            </ul>           
             <ul class="found-hotels-results">
                 <li class="found-hotel">
                     <p class="found-hotel-image">
