--- a/hotels.html
+++ b/hotels.html
@@ -63,9 +63,14 @@
                 </fieldset>
                 <fieldset>
                     <legend>Стоимость в сутки (р):</legend>
-                    <span class="price-range">От 0</span><span class="price-range">До 3000</span>
-                    <label class="visually-hidden" for="filter-price-range">Выберите стоимость</label>
-                    <input class="filter-range" type="range" name="price" id="filter-price-range" min="0" max="3000" value="2000" step="100">
+                    <label class="visually-hidden" for="left-button-range">Левый ползунок</label>
+                    <input type="button" class="left-range" id="left-button-range"></button>
+                    <label class="visually-hidden" for="right-button-range">Правый ползунок</label>
+                    <input type="button" class="right-range" id="right-button-range"></button>
+                    <label for="min-price-value"></label>
+                    <input type="number" id="min-price-value" name="min-price" value="0" min="0" max="3000">
+                    <label for="max-price-value"></label>
+                    <input type="number" id="max-price-value" name="max-price" value="2000" min="0" max="3000">
                 </fieldset>
                 <button type="submit" class="filter-button button">Показать</button>
             </form>
