--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
 			<section class="attractions">
 				<div class="attractions-info left">
 					<h2 class="attractions-name">Жилье</h2>
-					<p class="reasons-description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+					<p class="attractions-description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
 				</div>
 				<div class="attractions-info center">
 					<h2 class="attractions-name">Еда</h2>
-					<p class="reasons-description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+					<p class="attractions-description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
 				</div>
 				<div class="attractions-info right">
 					<h2 class="attractions-name">Сувениры</h2>
-					<p class="reasons-description">Не только китайского, но и местного производства!</p>
+					<p class="attractions-description">Не только китайского, но и местного производства!</p>
 				</div>
 			</section>
 			<div class="reasons-info right">
@@ -76,10 +76,10 @@
 		<section class="travel-search">
 			<div class="travel-search-form">
 				<img src="img/ind/map.jpg" width="1200" alt="Город Седона на карте">
-				<b class="travel-effect">Заинтересовались?</b>
-				<p class="travel-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+				<b>Заинтересовались?</b>
+				<p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
 				<div class="main-form">
-					<button class="travel-search-button">Поиск гостиницы в Седоне</button>
+					<button class="button travel-search-button">Поиск гостиницы в Седоне</button>
 					<form class="search-form" action="https://echo.htmlacademy.ru" method="post">
 						<fieldset>
 							<legend class="visually-hidden">Выбор параметров поиска гостиницы</legend>
@@ -109,7 +109,7 @@
 								<label class="visually-hidden" for="button-add-child">Увеличить</label>
 								<input type="button" class="add-child" id="button-add-child"></button>
 							</p>
-							<button class="button" type="submit">Найти</button>
+							<button class="button search-submit" type="submit">Найти</button>
 						</fieldset>
 					</form>
 				</div>
