--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
 			<img src="img/ind/index-main-group.jpg" width='1200' height="800" alt='Welcome to the gorgeous Sedona. Because the Grand Canyon sucks'>
 			<!-- Свойство :after для полигона -->
 		</div>
-		<h1 class='main-slogan'>Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
-		<p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+		<div class="index-wrapper"><h1 class='main-slogan'>Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
+			<p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p></div>
+		
 		<section class="reasons-attractions">
 			<div class="reasons-info left">
 				<h2 class="reasons-name">Настоящий городок</h2>
