--- a/index.html
+++ b/index.html
@@ -25,17 +25,20 @@
 	</header>
 	<main class='container'>
 		<div class="index-main-pic">
-			<img src="img/ind/index-main-group.jpg" width='1200' height="800" alt='Welcome to the gorgeous Sedona. Because the Grand Canyon sucks'>
+			<img src="img/ind/index-main-group.jpg" width='1200' height="773" alt='Welcome to the gorgeous Sedona. Because the Grand Canyon sucks'>
 			<!-- Свойство :after для полигона -->
 		</div>
-		<div class="index-wrapper"><h1 class='main-slogan'>Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
-			<p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p></div>
-		
+		<div class="index-wrapper">
+			<h1 class='main-slogan'>Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
+			<p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+		</div>		
 		<section class="reasons-attractions">
 			<div class="reasons-info left">
-				<h2 class="reasons-name">Настоящий городок</h2>
-				<p class="reasons-number">— №1 —</p>
-				<p class="reasons-description">Седона — не аттракцион для туристов, там течет своя жизнь</p>
+				<div class="reasons-wrapper">
+						<h2 class="reasons-name">Настоящий городок</h2>
+						<p class="reasons-number">— №1 —</p>
+						<p class="reasons-description">Седона — не аттракцион для туристов, там течет своя жизнь</p>
+				</div>
 				<img src="img/ind/reason-number-1.jpg" width="800" alt="Фото в городе Седона">
 			</div>
 			<section class="attractions">
@@ -53,9 +56,11 @@
 				</div>
 			</section>
 			<div class="reasons-info right">
-				<h2 class="reasons-name">Там есть мост дьявола</h2>
-				<p class="reasons-number">— №2 —</p>
-				<p class="reasons-description">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+					<div class="reasons-wrapper">
+							<h2 class="reasons-name">Там есть мост дьявола</h2>
+							<p class="reasons-number">— №2 —</p>
+							<p class="reasons-description">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+					</div>
 				<img src="img/ind/reason-number-2.jpg" width="800" alt="Фото моста дьявола">
 			</div>
 			<div class="reasons-info left">
